--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "dotnet.defaultSolution": "ex1.sln"
+    "dotnet.defaultSolution": "ex1.sln",
+    "C_Cpp.errorSquiggles": "disabled",
+    "files.associations": {
+        "iostream": "cpp"
+    }
 }
